# azwi

./: .gitignore  AGENTS.md  README.md  azwi.py  pyproject.toml  spec.md
.github/workflows/: release.yml
src/azwi/: __main__.py  cli.py  client.py  config.py  errors.py  models.py  render.py
tests/: conftest.py  test_cli.py  test_config.py  test_render.py
