[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "azwi"
version = "0.9.1"
description = "Azure DevOps work item fetcher for agentic coding tools"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "John Paul Ellis" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Version Control",
]
dependencies = []

[project.scripts]
azwi = "azwi.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
